# aigrc

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
aigrc/: __init__.py  cli.py
aigrc/checks/: pii_leakage_basic.py  prompt_injection_basic.py
aigrc/core/: __init__.py  models.py  registry.py  reporter.py  target.py
aigrc/mappings/: eu_ai_act.yaml  iso_42001.yaml  nist_ai_rmf.yaml  owasp_llm_top10.yaml
docs/: ARCHITECTURE.md  ROADMAP.md
docs/decisions/: 0001-deterministic-heuristics.md  0002-sarif-output-format.md
docs/research/: 2026-04-20-week-log.md
tests/: test_pii_leakage.py  test_prompt_injection.py
