[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aigrc"
version = "0.1.0"
description = "Executable AI governance checks mapped to NIST AI RMF, EU AI Act, ISO 42001, and OWASP LLM Top 10"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Connect Smart Consulting Inc.", email = "hello@connectsmart.ca" }]
keywords = ["ai", "governance", "nist", "ai-rmf", "eu-ai-act", "owasp", "llm", "testing", "compliance"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "typer>=0.12",
  "httpx>=0.27",
  "pyyaml>=6.0",
  "rich>=13.7",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.3"]

[project.scripts]
aigrc = "aigrc.cli:app"

[project.urls]
Homepage = "https://github.com/connectsmartconsulting/aigrc"
Issues = "https://github.com/connectsmartconsulting/aigrc/issues"

[tool.hatch.build.targets.wheel]
packages = ["aigrc"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
